--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           border: 1px solid #000;
       }
       
-      header, nav, article, aside {
+      header, nav, article, aside, footer {
+        margin:5px;
         background-color: #ddd;
       }
     </style>
